--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#FF8080"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardViewTitulo"
-        app:spanCount="2" />
+        app:layout_constraintTop_toBottomOf="@+id/cardViewTitulo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
