Se agrega función para borrar elementod del carrito y para sumar el total de los productos del carro.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,5 +30,9 @@
         android:id="@+id/thirdFragmentCart"
         android:name="com.example.project_zapatos.ThirdFragmentCart"
         android:label="fragment_third_cart"
-        tools:layout="@layout/fragment_third_cart" />
+        tools:layout="@layout/fragment_third_cart" >
+        <action
+            android:id="@+id/action_thirdFragmentCart_self"
+            app:destination="@id/thirdFragmentCart" />
+    </fragment>
 </navigation>
