Se modifica lista y se limpia codigo.

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -54,23 +54,12 @@
 
             </androidx.cardview.widget.CardView>
 
-            <ImageButton
-                android:id="@+id/imageButtonCarrito"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="2dp"
-                android:layout_marginBottom="2dp"
-                android:backgroundTint="#D6D58E"
-                android:contentDescription="Ver carro"
-                android:src="@drawable/baseline_add_shopping_cart_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
             <TextView
                 android:id="@+id/textViewPrecio"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
+                android:gravity="center"
                 android:text="Precio"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/textViewNombreZapato"
@@ -84,6 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:gravity="center"
                 android:text="Nombre"
                 app:layout_constraintEnd_toEndOf="@+id/cvImagenZapato"
                 app:layout_constraintStart_toStartOf="@+id/cvImagenZapato"
