--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -31,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:backgroundTint="@color/white"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +62,8 @@
                 android:layout_marginTop="2dp"
                 android:gravity="center"
                 android:text="Precio"
+                android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/textViewNombreZapato"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -72,9 +75,11 @@
                 android:id="@+id/textViewNombreZapato"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center"
                 android:text="Nombre"
+                android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/cvImagenZapato"
                 app:layout_constraintStart_toStartOf="@+id/cvImagenZapato"
                 app:layout_constraintTop_toBottomOf="@+id/cvImagenZapato" />
