--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="other_black">#0D0D0D</color>
+    <color name="other_white">#F2F2F2</color>
+    <color name="gray">#D9D9D9</color>
+    <color name="pink">#F26D6D</color>
+
+
 </resources>
