Se agrega botón con su implementación para eliminar todos los productos del carro.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,5 +32,8 @@
         android:label="fragment_third_cart"
         tools:layout="@layout/fragment_third_cart" >
 
+        <action
+            android:id="@+id/action_thirdFragmentCart_self"
+            app:destination="@id/thirdFragmentCart" />
     </fragment>
 </navigation>
