--- a/app/src/main/res/layout/fragment_third_cart.xml
+++ b/app/src/main/res/layout/fragment_third_cart.xml
@@ -59,6 +59,20 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textViewTitleThird"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imageButtonDeleteAll"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="1dp"
+                android:backgroundTint="@android:color/transparent"
+                android:src="@drawable/baseline_delete_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
