--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -109,12 +109,11 @@
 
     <Button
         android:id="@+id/buttonAddCart"
+        style="@style/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
         android:drawableLeft="@drawable/baseline_add_shopping_cart_24_w"
-        android:text="Add to cart"
-        app:cornerRadius="10dp"
+        android:text="@string/botonAdd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
